[gd_scene load_steps=7 format=3 uid="uid://3jbkb6afp78t"]

[ext_resource type="PackedScene" uid="uid://la0lgyyjggxx" path="res://scenes/ui/main_menu.tscn" id="1_1vrmx"]
[ext_resource type="Script" path="res://scripts/ui/ui.gd" id="1_nv2cv"]
[ext_resource type="PackedScene" uid="uid://dt6nb73oq0wcj" path="res://scenes/ui/plant_stats_ui.tscn" id="3_fd46x"]
[ext_resource type="PackedScene" uid="uid://caml3oiyt3p00" path="res://scenes/ui/timer_ui.tscn" id="4_oax01"]
[ext_resource type="PackedScene" uid="uid://d4t0ax0eb8va" path="res://scenes/ui/plant_stat_changes_ui.tscn" id="5_3kt1e"]
[ext_resource type="PackedScene" uid="uid://dnei8a1w75lap" path="res://scenes/ui/results_ui.tscn" id="6_0uat1"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nv2cv")

[node name="PlantStatsUi" parent="." instance=ExtResource("3_fd46x")]
visible = false

[node name="TimerUI" parent="." instance=ExtResource("4_oax01")]
visible = false

[node name="PlantStatChangesUI" parent="." instance=ExtResource("5_3kt1e")]
visible = false

[node name="MainMenu" parent="." instance=ExtResource("1_1vrmx")]

[node name="ResultsUI" parent="." instance=ExtResource("6_0uat1")]
visible = false
